[package]
name = "green_beans"
version = "0.1.0"
authors = ["Zhihang-Liu <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corn = { git="https://github.com/pigeon-project/corn.git" }
lazy_static = "1.4.0"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
